structure allmost complete. TODO: blog feed

--- a/index.html
+++ b/index.html
@@ -108,6 +108,132 @@
           </div>
         </div>
       </div>
+      <div class="questions">
+        <div class="question">
+          <div class="question_left">
+            <div class="votes">9 votes</div>
+            <div class="answers">1 answer</div>
+            <div class="views">304 views</div>
+          </div>
+          <div class="question_title">Flask send pyaudio to browser</div>
+          <div class="question_tags">
+            <div class="question_tag">python</div>
+            <div class="question_tag">html</div>
+            <div class="question_tag">flask</div>
+          </div>
+
+          <div class="author">
+            <div class="author_link">peyman</div>
+            <div class="author_score">4,888</div>
+            <div class="question_history">modified 11 hours ago</div>
+          </div>
+        </div>
+      </div>
+      <div class="questions">
+        <div class="question">
+          <div class="question_left">
+            <div class="votes">9 votes</div>
+            <div class="answers">1 answer</div>
+            <div class="views">304 views</div>
+          </div>
+          <div class="question_title">Flask send pyaudio to browser</div>
+          <div class="question_tags">
+            <div class="question_tag">python</div>
+            <div class="question_tag">html</div>
+            <div class="question_tag">flask</div>
+          </div>
+
+          <div class="author">
+            <div class="author_link">peyman</div>
+            <div class="author_score">4,888</div>
+            <div class="question_history">modified 11 hours ago</div>
+          </div>
+        </div>
+      </div>
+      <div class="questions">
+        <div class="question">
+          <div class="question_left">
+            <div class="votes">9 votes</div>
+            <div class="answers">1 answer</div>
+            <div class="views">304 views</div>
+          </div>
+          <div class="question_title">Flask send pyaudio to browser</div>
+          <div class="question_tags">
+            <div class="question_tag">python</div>
+            <div class="question_tag">html</div>
+            <div class="question_tag">flask</div>
+          </div>
+
+          <div class="author">
+            <div class="author_link">peyman</div>
+            <div class="author_score">4,888</div>
+            <div class="question_history">modified 11 hours ago</div>
+          </div>
+        </div>
+      </div>
+      <div class="questions">
+        <div class="question">
+          <div class="question_left">
+            <div class="votes">9 votes</div>
+            <div class="answers">1 answer</div>
+            <div class="views">304 views</div>
+          </div>
+          <div class="question_title">Flask send pyaudio to browser</div>
+          <div class="question_tags">
+            <div class="question_tag">python</div>
+            <div class="question_tag">html</div>
+            <div class="question_tag">flask</div>
+          </div>
+
+          <div class="author">
+            <div class="author_link">peyman</div>
+            <div class="author_score">4,888</div>
+            <div class="question_history">modified 11 hours ago</div>
+          </div>
+        </div>
+      </div>
+      <div class="questions">
+        <div class="question">
+          <div class="question_left">
+            <div class="votes">9 votes</div>
+            <div class="answers">1 answer</div>
+            <div class="views">304 views</div>
+          </div>
+          <div class="question_title">Flask send pyaudio to browser</div>
+          <div class="question_tags">
+            <div class="question_tag">python</div>
+            <div class="question_tag">html</div>
+            <div class="question_tag">flask</div>
+          </div>
+
+          <div class="author">
+            <div class="author_link">peyman</div>
+            <div class="author_score">4,888</div>
+            <div class="question_history">modified 11 hours ago</div>
+          </div>
+        </div>
+      </div>
+      <div class="questions">
+        <div class="question">
+          <div class="question_left">
+            <div class="votes">9 votes</div>
+            <div class="answers">1 answer</div>
+            <div class="views">304 views</div>
+          </div>
+          <div class="question_title">Flask send pyaudio to browser</div>
+          <div class="question_tags">
+            <div class="question_tag">python</div>
+            <div class="question_tag">html</div>
+            <div class="question_tag">flask</div>
+          </div>
+
+          <div class="author">
+            <div class="author_link">peyman</div>
+            <div class="author_score">4,888</div>
+            <div class="question_history">modified 11 hours ago</div>
+          </div>
+        </div>
+      </div>
     </section>
     <article>
       <div class="blog_news_container">
