structure base on grid(but not working) switch to flex

--- a/index.html
+++ b/index.html
@@ -237,7 +237,20 @@
     </section>
     <article>
       <div class="blog_news_container">
-        <h1>Carask Blog</h1>
+        <div class="blog_news_header">CaraAsk Blog Feed</div>
+        <div class="blog_news">last update for some program released.</div>
+        <div class="blog_news">last update for some program released.</div>
+        <div class="blog_news">last update for some program released.</div>
+        <div class="blog_news">last update for some program released.</div>
+        <div class="blog_news">last update for some program released.</div>
+        <div class="blog_news">last update for some program released.</div>
+        <div class="blog_news">last update for some program released.</div>
+        <div class="blog_news">last update for some program released.</div>
+        <div class="blog_news">last update for some program released.</div>
+        <div class="blog_news">last update for some program released.</div>
+        <div class="blog_news">last update for some program released.</div>
+        <div class="blog_news">last update for some program released.</div>
+        <div class="blog_news">last update for some program released.</div>
         <div class="blog_news">last update for some program released.</div>
       </div>
     </article>
