structure base on flex and responsive

--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
       <div class="logo">LOGO</div>
       <div class="search">Search</div>
       <div class="user">
+        <div class="search_buttton">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="currentColor"
+            class="w-6 h-6"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M10.5 3.75a6.75 6.75 0 100 13.5 6.75 6.75 0 000-13.5zM2.25 10.5a8.25 8.25 0 1114.59 5.28l4.69 4.69a.75.75 0 11-1.06 1.06l-4.69-4.69A8.25 8.25 0 012.25 10.5z"
+              clip-rule="evenodd"
+            />
+          </svg>
+        </div>
         <div class="user-profile">
           <img src="Assets/people-1.jpg" alt="" />
           <div>151</div>
@@ -61,199 +75,81 @@
         </div>
       </div>
     </nav>
-    <aside>
-      <ol>
-        <li class="active">Home</li>
-        <li>Questions</li>
+    <main>
+      <div class="aside">
+        <div class="active">Home</div>
         <ol>
-          <li>Tags</li>
-          <li>User</li>
-          <li>Companies</li>
+          <li>Questions</li>
+          <ol>
+            <li>Tags</li>
+            <li>User</li>
+            <li>Companies</li>
+          </ol>
         </ol>
-      </ol>
-    </aside>
+      </div>
 
-    <section>
-      <div class="top_questions">
-        <div class="top_questions_title">Top Questions</div>
-        <div class="ask_question">
-          <a href="#"> Ask Question </a>
-        </div>
-        <div class="top_questions_filter">
-          <div class="filter-active">Interesting</div>
-          <div>Boutied</div>
-          <div>Hot</div>
-          <div>Week</div>
-          <div>Month</div>
-        </div>
-      </div>
-      <div class="questions">
-        <div class="question">
-          <div class="question_left">
-            <div class="votes">9 votes</div>
-            <div class="answers">1 answer</div>
-            <div class="views">304 views</div>
+      <section>
+        <div class="top_questions">
+          <div class="top_questions_top">
+            <div class="top_questions_title">Top Questions</div>
+            <div class="ask_question">
+              <button type="button">Ask Question</button>
+            </div>
           </div>
-          <div class="question_title">Flask send pyaudio to browser</div>
-          <div class="question_tags">
-            <div class="question_tag">python</div>
-            <div class="question_tag">html</div>
-            <div class="question_tag">flask</div>
+          <div class="top_questions_bottom">
+            <div class="top_questions_filter">
+              <div class="filter-active">Interesting</div>
+              <div>Boutied</div>
+              <div>Hot</div>
+              <div>Week</div>
+              <div>Month</div>
+            </div>
           </div>
+        </div>
+        <div class="questions">
+          <div class="question">
+            <div class="question_left">
+              <div class="votes">9 votes</div>
+              <div class="answers">1 answer</div>
+              <div class="views">304 views</div>
+            </div>
+            <div class="question_body">
+              <div class="question_title">Flask send pyaudio to browser</div>
+              <div class="question_tags">
+                <div class="question_tag">python</div>
+                <div class="question_tag">html</div>
+                <div class="question_tag">flask</div>
+              </div>
 
-          <div class="author">
-            <div class="author_link">peyman</div>
-            <div class="author_score">4,888</div>
-            <div class="question_history">modified 11 hours ago</div>
+              <div class="author">
+                <div class="author_link">peyman</div>
+                <div class="author_score">4,888</div>
+                <div class="question_history">modified 11 hours ago</div>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="questions">
-        <div class="question">
-          <div class="question_left">
-            <div class="votes">9 votes</div>
-            <div class="answers">1 answer</div>
-            <div class="views">304 views</div>
-          </div>
-          <div class="question_title">Flask send pyaudio to browser</div>
-          <div class="question_tags">
-            <div class="question_tag">python</div>
-            <div class="question_tag">html</div>
-            <div class="question_tag">flask</div>
-          </div>
-
-          <div class="author">
-            <div class="author_link">peyman</div>
-            <div class="author_score">4,888</div>
-            <div class="question_history">modified 11 hours ago</div>
-          </div>
+      </section>
+      <article>
+        <div class="blog_news_container">
+          <div class="blog_news_header">CaraAsk Blog Feed</div>
+          <div class="blog_news">last update for some program released.</div>
+          <div class="blog_news">last update for some program released.</div>
+          <div class="blog_news">last update for some program released.</div>
+          <div class="blog_news">last update for some program released.</div>
+          <div class="blog_news">last update for some program released.</div>
+          <div class="blog_news">last update for some program released.</div>
+          <div class="blog_news">last update for some program released.</div>
+          <div class="blog_news">last update for some program released.</div>
+          <div class="blog_news">last update for some program released.</div>
+          <div class="blog_news">last update for some program released.</div>
+          <div class="blog_news">last update for some program released.</div>
+          <div class="blog_news">last update for some program released.</div>
+          <div class="blog_news">last update for some program released.</div>
+          <div class="blog_news">last update for some program released.</div>
         </div>
-      </div>
-      <div class="questions">
-        <div class="question">
-          <div class="question_left">
-            <div class="votes">9 votes</div>
-            <div class="answers">1 answer</div>
-            <div class="views">304 views</div>
-          </div>
-          <div class="question_title">Flask send pyaudio to browser</div>
-          <div class="question_tags">
-            <div class="question_tag">python</div>
-            <div class="question_tag">html</div>
-            <div class="question_tag">flask</div>
-          </div>
-
-          <div class="author">
-            <div class="author_link">peyman</div>
-            <div class="author_score">4,888</div>
-            <div class="question_history">modified 11 hours ago</div>
-          </div>
-        </div>
-      </div>
-      <div class="questions">
-        <div class="question">
-          <div class="question_left">
-            <div class="votes">9 votes</div>
-            <div class="answers">1 answer</div>
-            <div class="views">304 views</div>
-          </div>
-          <div class="question_title">Flask send pyaudio to browser</div>
-          <div class="question_tags">
-            <div class="question_tag">python</div>
-            <div class="question_tag">html</div>
-            <div class="question_tag">flask</div>
-          </div>
-
-          <div class="author">
-            <div class="author_link">peyman</div>
-            <div class="author_score">4,888</div>
-            <div class="question_history">modified 11 hours ago</div>
-          </div>
-        </div>
-      </div>
-      <div class="questions">
-        <div class="question">
-          <div class="question_left">
-            <div class="votes">9 votes</div>
-            <div class="answers">1 answer</div>
-            <div class="views">304 views</div>
-          </div>
-          <div class="question_title">Flask send pyaudio to browser</div>
-          <div class="question_tags">
-            <div class="question_tag">python</div>
-            <div class="question_tag">html</div>
-            <div class="question_tag">flask</div>
-          </div>
-
-          <div class="author">
-            <div class="author_link">peyman</div>
-            <div class="author_score">4,888</div>
-            <div class="question_history">modified 11 hours ago</div>
-          </div>
-        </div>
-      </div>
-      <div class="questions">
-        <div class="question">
-          <div class="question_left">
-            <div class="votes">9 votes</div>
-            <div class="answers">1 answer</div>
-            <div class="views">304 views</div>
-          </div>
-          <div class="question_title">Flask send pyaudio to browser</div>
-          <div class="question_tags">
-            <div class="question_tag">python</div>
-            <div class="question_tag">html</div>
-            <div class="question_tag">flask</div>
-          </div>
-
-          <div class="author">
-            <div class="author_link">peyman</div>
-            <div class="author_score">4,888</div>
-            <div class="question_history">modified 11 hours ago</div>
-          </div>
-        </div>
-      </div>
-      <div class="questions">
-        <div class="question">
-          <div class="question_left">
-            <div class="votes">9 votes</div>
-            <div class="answers">1 answer</div>
-            <div class="views">304 views</div>
-          </div>
-          <div class="question_title">Flask send pyaudio to browser</div>
-          <div class="question_tags">
-            <div class="question_tag">python</div>
-            <div class="question_tag">html</div>
-            <div class="question_tag">flask</div>
-          </div>
-
-          <div class="author">
-            <div class="author_link">peyman</div>
-            <div class="author_score">4,888</div>
-            <div class="question_history">modified 11 hours ago</div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <article>
-      <div class="blog_news_container">
-        <div class="blog_news_header">CaraAsk Blog Feed</div>
-        <div class="blog_news">last update for some program released.</div>
-        <div class="blog_news">last update for some program released.</div>
-        <div class="blog_news">last update for some program released.</div>
-        <div class="blog_news">last update for some program released.</div>
-        <div class="blog_news">last update for some program released.</div>
-        <div class="blog_news">last update for some program released.</div>
-        <div class="blog_news">last update for some program released.</div>
-        <div class="blog_news">last update for some program released.</div>
-        <div class="blog_news">last update for some program released.</div>
-        <div class="blog_news">last update for some program released.</div>
-        <div class="blog_news">last update for some program released.</div>
-        <div class="blog_news">last update for some program released.</div>
-        <div class="blog_news">last update for some program released.</div>
-        <div class="blog_news">last update for some program released.</div>
-      </div>
-    </article>
-    <footer></footer>
+      </article>
+    </main>
+    <!-- <footer></footer> -->
   </body>
 </html>
